--- a/HTML HackDavis/home.css
+++ b/HTML HackDavis/home.css
@@ -61,6 +61,8 @@
   padding-bottom: 5em;
 }
 
+/* steam animation */
+
 .steam{
   position:absolute;
   height: 150px;
@@ -69,7 +71,7 @@
   background-color:#fff;
   margin-top:-75px;
   margin-left:350px;
-  z-index: -1;
+  z-index: 0;
   opacity:0;
 }
 
@@ -113,6 +115,8 @@
   100% {transform: translateY(-200px) translateX(20px) scale(1); opacity: 0;}
 }
 
+/*end of steam animation*/
+
 .potbackground{
   background-color: #a2b570;
   padding-left: 5em;
@@ -120,13 +124,62 @@
 
 .potlid{
   padding-left: 2.5em;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
+
+/*swinging animation*/
+@-webkit-keyframes swing {
+  10%, 20%, 30% 40%,50%, 60%, 70%, 80%, 90%,100% { -webkit-transform-origin:top center;}
+  20% { -webkit-transform: rotate(9deg); }
+  40% { -webkit-transform: rotate(-7deg); }
+  60% { -webkit-transform: rotate(5deg); }
+  80% { -webkit-transform: rotate(-3deg); }
+  100% { -webkit-transform: rotate(0deg); }
+}
+
+@keyframes swing {
+  20% { -webkit-transform: rotate(9deg); }
+  40% { -webkit-transform: rotate(-7deg); }
+  60% { -webkit-transform: rotate(5deg); }
+  80% { -webkit-transform: rotate(-5deg); }
+  100% { -webkit-transform: rotate(0deg); }
+}
+
+.swing {
+  -webkit-transform-origin: top center;
+  transform-origin: top center;
+  -webkit-animation-name: swing;
+  animation-name: swing;
+}
+/* end of swinging animation*/
+
+/*start of fading in text animation*/
+.fade-in{
+  animation: fadeIn ease 5s;
+  -webkit-animation:fadeIn ease 5s;
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity:0;
+  }
+  100%{
+    opacity:1;
+  }
+}
+
+/* end of fading in text animation*/
 
 .contactInfo{
   background-color: black;
+  display: flex;
 }
 
-.ovenknob{
-  height:15%;
+.socialIcons{
+  padding-right: 7em;
+  padding-left: 7em;
 }
