--- a/HTML HackDavis/home.css
+++ b/HTML HackDavis/home.css
@@ -3,11 +3,21 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: lemonMilkBold;
+  src: url("lemon_milk/LEMONMILK-BOLD.otf");
+}
+
+@font-face {
+  font-family: lemonMilkReg;
+  src: url("lemon_milk/LEMONMILK-Regular.otf");
+}
 
 /* Home */
 .homePage {
   height: 100vh;
   background-image: url("HackDavis Images/foodbanner.jpg");
+  background-color: rgb(245, 233, 239);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -57,10 +67,9 @@
 
 .advancedSearch{
   text-align: center;
-  border: 2px solid white;
   background-color: beige;
   padding: 8px;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -84,68 +93,110 @@
 }
 
 .missionstatement{
-  margin-left: 49em;
+  margin-left: 45em;
   margin-right: 10em;
   margin-bottom: 2em;
   padding-left: 2em;
   padding-right: 2em;
   padding-top: 4em;
   padding-bottom: 2em;
+  color:#333;
 }
 
-/* steam animation */
+.infoheader{
+  display:flex;
+  margin-bottom: 4em;
+  font-family: lemonMilkBold;
+}
 
-.steam{
+.infoheading{
+  margin-top: 14px;
+  margin-right: 14px;
+}
+
+/* ----------Steam Animation -------------*/
+/******************************************/
+
+
+.veggie{
   position:absolute;
-  height: 150px;
-  width: 150px;
+  overflow:hidden;
   border-radius:50%;
-  background-color:#fff;
   margin-top:-75px;
-  margin-left:350px;
-  z-index: 0;
+  margin-left:300px;
   opacity:0;
 }
 
-#steam-1 {
-  -webkit-animation: steam-1 4s ease-out infinite;
-  animation: steam-1 4s ease-out infinite;
+  #vsteam-1 {
+    -webkit-animation: vsteam-1 4s ease-out infinite;
+    animation: vsteam-1 4s ease-out infinite;
+  }
+
+  #vsteam-3 {
+    -webkit-animation: vsteam-1 4s ease-out 1s infinite;
+    animation: vsteam-1 4s ease-out 1s infinite;
+  }
+
+  @-webkit-keyframes vsteam-1 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+    100% {transform: translateY(-200px) translateX(-100px) scale(1); opacity: 0;}
+  }
+
+  @keyframes vsteam-1 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+    100% {transform: translateY(-200px) translateX(-100px) scale(1); opacity: 0;}
+  }
+
+  #vsteam-2 {
+    -webkit-animation: vsteam-2 4s ease-out 0.5s infinite;
+    animation: vsteam-2 3s ease-out 0.5s infinite;
+  }
+
+  #vsteam-4 {
+    -webkit-animation: vsteam-2 4s ease-out 1.5s infinite;
+    animation: vsteam-2 4s ease-out 1.5s infinite;
+  }
+
+  @-webkit-keyframes vsteam-2 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+    100% {transform: translateY(-200px) translateX(100px) scale(1); opacity: 0;}
+  }
+
+  @keyframes vsteam-2 {
+    0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+    100% {transform: translateY(-200px) translateX(100px) scale(1); opacity: 0;}
 }
 
-#steam-3 {
-  -webkit-animation: steam-1 4s ease-out 1s infinite;
-  animation: steam-1 4s ease-out 1s infinite;
+#vsteam-5 {
+  -webkit-animation: vsteam-5 4s ease-out 0.5s infinite;
+  animation: vsteam-5 3s ease-out 2.0s infinite;
 }
 
-@-webkit-keyframes steam-1 {
-  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 1;}
-  100% {transform: translateY(-200px) translateX(-20px) scale(1); opacity: 0;}
+#vsteam-6 {
+  -webkit-animation: vsteam-6 4s ease-out 1.5s infinite;
+  animation: vsteam-6 4s ease-out 2.5s infinite;
 }
 
-@keyframes steam-1 {
-  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 1;}
-  100% {transform: translateY(-200px) translateX(-20px) scale(1); opacity: 0;}
+@-webkit-keyframes vsteam-5 {
+  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+  100% {transform: translateY(-200px) translateX(-100px) scale(1); opacity: 0;}
 }
 
-#steam-2 {
-  -webkit-animation: steam-2 4s ease-out 0.5s infinite;
-  animation: steam-2 4s ease-out 0.5s infinite;
+@keyframes vsteam-5 {
+  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+  100% {transform: translateY(-200px) translateX(-100px) scale(1); opacity: 0;}
 }
 
-#steam-4 {
-  -webkit-animation: steam-2 4s ease-out 1.5s infinite;
-  animation: steam-2 4s ease-out 1.5s infinite;
+@-webkit-keyframes vsteam-6 {
+  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+  100% {transform: translateY(-200px) translateX(100px) scale(1); opacity: 0;}
 }
 
-@-webkit-keyframes steam-2 {
-  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 1;}
-  100% {transform: translateY(-200px) translateX(20px) scale(1); opacity: 0;}
+@keyframes vsteam-6 {
+  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 0.6;}
+  100% {transform: translateY(-200px) translateX(100px) scale(1); opacity: 0;}
 }
 
-@keyframes steam-2 {
-  0% {transform: translateY(0) translateX(0) scale(0.25); opacity: 1;}
-  100% {transform: translateY(-200px) translateX(20px) scale(1); opacity: 0;}
-}
 
 /*end of steam animation*/
 
@@ -155,47 +206,55 @@
 }
 
 .missionstatement2{
-  margin-left: 2em;
+
   margin-right: 10em;
   margin-top: 2em;
   margin-bottom:2em;
   padding: 2em;
+  color:#333;
 }
 
 .pot{
-  margin-right: 8em;
+  margin-right: 6em;
   margin-left:2em;
+  margin-top:4em;
+
 }
 
 .potlid{
   margin-left: 10em;
-  -webkit-animation-duration: 4s;
-  animation-duration: 4s;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  animation-iteration-count:infinite;
 }
+
 
 .potbottom{
   margin-left: 7.5em;
+
 }
 
 
 /*swinging animation*/
 @-webkit-keyframes swing {
-  20%,40%, 60%, 80%,100% { -webkit-transform-origin:top center;}
-  20% { -webkit-transform: rotate(9deg); }
-  40% { -webkit-transform: rotate(-7deg); }
-  60% { -webkit-transform: rotate(5deg); }
-  80% { -webkit-transform: rotate(-3deg); }
-  100% { -webkit-transform: rotate(0deg); }
+  5%,10%, 15%, 20%,25%,100% { -webkit-transform-origin:top center;}
+  5% { -webkit-transform: rotate(9deg); }
+  10% { -webkit-transform: rotate(-7deg); }
+  15% { -webkit-transform: rotate(5deg); }
+  20% { -webkit-transform: rotate(-3deg); }
+  25% { -webkit-transform: rotate(0deg); }
+  100%{ -webkit-transform: rotate(0deg);}
 }
 
 @keyframes swing {
-  20% { -webkit-transform: rotate(9deg); }
-  40% { -webkit-transform: rotate(-7deg); }
-  60% { -webkit-transform: rotate(5deg); }
-  80% { -webkit-transform: rotate(-5deg); }
-  100% { -webkit-transform: rotate(0deg); }
+  5% { -webkit-transform: rotate(9deg); }
+  10% { -webkit-transform: rotate(-7deg); }
+  15% { -webkit-transform: rotate(5deg); }
+  20% { -webkit-transform: rotate(-3deg); }
+  25% { -webkit-transform: rotate(0deg); }
+  100%{ -webkit-transform: rotate(0deg);}
 }
 
 .swing {
@@ -225,7 +284,7 @@
 
 .contactInfo{
 
-  background-color: black;
+  background-color: #111;
   margin:auto;
   display: flex;
 }
@@ -244,25 +303,28 @@
   padding: 1em;
 
 }
-.email{
-  flex-direction: row;
+
+.fa-github{
+  text-decoration: none;
+  color: grey;
+  padding: 1em;
+  text-align: center;
 }
-.fas{
-  border: solid white;
+.fab-linkedin-in{
   text-decoration: none;
   color: grey;
   padding: 1em;
   text-align: center;
 }
 
-.fas:hover{
+.fa-github:hover{
+  color:lightblue;
+}
+
+.fa-linkedin-in:hover{
   color:lightblue;
 }
 
 .fab:hover{
   color: lightblue;
-}
-
-.test{
-  border:solid white;
 }
