--- a/HTML HackDavis/home.css
+++ b/HTML HackDavis/home.css
@@ -5,19 +5,18 @@
 
 @font-face {
   font-family: lemonMilkBold;
-  src: url("lemon_milk/LEMONMILK-BOLD.otf");
+  src: url("LEMONMILK-BOLD.otf");
 }
 
 @font-face {
   font-family: lemonMilkReg;
-  src: url("lemon_milk/LEMONMILK-Regular.otf");
+  src: url("LEMONMILK-Regular.otf");
 }
+
 
 /* Home */
 .homePage {
   height: 100vh;
-  background-image: url("HackDavis Images/foodbanner.jpg");
-  background-color: rgb(245, 233, 239);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -41,7 +40,9 @@
 .homePage-search {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .homePage-text {
   color: white;
@@ -49,7 +50,7 @@
 
 .homePage-box {
   background: rgb(206,255,201);
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(119,221,119,0.6) 100%);
+  background: linear-gradient(0deg, rgba(206,255,201,1) 0%, rgba(119,221,119,1) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,28 +62,31 @@
   width: 70%;
 }
 
+
 .searchBar:active {
   opacity: 1;
 }
 
-.advancedSearch{
-  text-align: center;
-  background-color: beige;
-  padding: 8px;
-  border-radius: 20px;
+.submit-button {
+  margin-top: 5px;
+  padding: 5px;
+  color: white;
+  background-color: #F98B88;
+  border: 2px solid #F98B88;
+}
+
+.submit-button:hover {
+  opacity: 0.75;
   cursor: pointer;
 }
 
-.advancedSearch a {
-  text-decoration: none;
-  color: black;
-  font-size: 12px;
+.trendHeading{
+  background-color: #CEFFC9;
 }
 
-.advancedSearch:hover {
-  opacity: 0.95;
-}
 
+
+/* second page */
 .appInfo{
   background-color: #CEFFC9;
 }
