--- a/HTML HackDavis/recipe.css
+++ b/HTML HackDavis/recipe.css
@@ -11,21 +11,90 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgb(206,255,201);
+    background: linear-gradient(0deg, rgba(206,255,201,1) 0%, rgba(119,221,119,1) 100%)
 }
 
-.info-box {
-    height: 75%;
-    width: 65%;
-    text-align: center;
-    background: rgb(206,255,201);
-    background: linear-gradient(0deg, rgba(206,255,201,1) 0%, rgba(119,221,119,1) 100%); 
-    display: flex;   
+.info-container {
+    height: 90%;
+    width: 85%;
+    text-align: center;;   
     justify-content: center;
-    align-items: center;
+    align-items: center; 
+    display: flex;
+    background: white;
+    box-shadow: 1px 1px 15px 1px gray;
 }
 
 .info-border-in {
     width: 95%;
     height: 95%;
-    border: 2px solid white;
 }
+
+.market-box {
+    box-shadow: 1px 1px 5px 1px gray;
+    display: flex;
+    flex-direction: column;
+    height: 20%;
+    width: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
+    position: relative;
+}
+
+.market {
+    font-size: 20px;
+    border-bottom: 1px solid white;
+    padding: 8px;
+    background: lightgray;
+}
+
+.market:hover {
+    opacity: 0.8;
+}
+
+.market span {
+    color: white;
+}
+
+.info-food {
+    height: 65%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: scroll;
+}
+
+.recipe-box {
+    border: 2px solid black;
+    width: 20%;
+    height: 35%;
+    padding: 10px;
+    margin: 10px;
+}
+
+.food-container {
+    position: relative;
+    height: 100%;
+}
+
+.recipe-box-image {
+}
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
