--- a/HTML HackDavis/recipe.css
+++ b/HTML HackDavis/recipe.css
@@ -1,17 +1,25 @@
-
-
 html, body {
     margin: 0;
 }
 
 .info {
   background-color: #f2f2ed;
+  text-align: center;
+  /*
+  border:solid lightblue;
+    background-image: url("HackDavis Images/foodbanner.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;*/
   }
 .info-border-in {
 }
 
 .announcement{
-  text-align:left;
+  text-align:center;
 }
 
 .foodIcon{
@@ -58,7 +66,7 @@ html, body {
     justify-content: center;
     flex-wrap: wrap;
     text-align: center;
-    *overflow: scroll;*/
+    /*overflow: scroll;*/
 }
 
 
@@ -95,6 +103,10 @@ html, body {
   margin-left: 4em;
   margin-bottom: 2em;
   margin-top:1em;
+}
+
+.barmenu{
+  border: solid black;
 }
 
 ::-webkit-scrollbar {
